--- a/practicepage.html
+++ b/practicepage.html
@@ -5,7 +5,10 @@
 <title>I like pie a lot!</title>
 </head>
 <body style="background-color: cyan;">
-    <!-- This is a comment, doughnut steel!!! -->
+
+    <!-- This is a comment, doughnut steel!!!
+        below are just headings and paragraphs that
+        use various parameters.-->
 
     <h1>This heading is for pie.</h1>
     <p>This paragraph explains why I like pie.</p>
@@ -44,8 +47,9 @@
 <p>Here is a short quote from professor Cake:  <q>Pie is ghey, lol!</q></p>
 <hr>
 
-<p>Abreviations work like this: <abbr title="People Inherit Earth">PIE</abbr>Organization was founded in 1991.</p>
-
+<p>Abreviations work like this:  The <abbr title="People Inherit Earth">PIE</abbr> Organization was founded in 1991.</p>
+   
+    <!-- This is an Adress line.  It just makes it easier to put information down line by line.-->
 <address>490 S 3rd E St. <br>
          Mountain Home <br>
          Idaho <br>
