New update to HTML & CSS.

--- a/practicepage.html
+++ b/practicepage.html
@@ -1,8 +1,8 @@
 <!DOCTYPE html>
 <html lang="en-US">
 <head>
-    <link rel="stylesheet" href="NewStyle.css"
-<title>I like pie a lot!</title>
+    <!--<link rel="stylesheet" href="NewStyle.css"-->
+    <title>I like pie a lot!</title>
 </head>
 <body style="background-color: cyan;">
 
@@ -13,8 +13,8 @@
     <h1>This heading is for pie.</h1>
     <p>This paragraph explains why I like pie.</p>
     
-    <a href="www.pie.com">This is a link to pie.</a>
-    <img src="/web/pie.jpeg" alt="This is a picture of pie." width="1200" height="1200">
+    <a href="www.pie.com">
+    <img src="Pictures/uzaki.png" alt="This is a picture of a qt pie." width="500" height="500">This is a link to pie.</a>&nbsp;
     
     <p>This paragraph has a <br> line break</p>
     <p style="color: blueviolet;">This is a colored paragraph about pie.</p>
